--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tailwindcss/typography": "^0.5.13",
     "bcryptjs": "^2.4.3",
     "client-sessions": "^0.8.0",
+    "cookies": "^0.9.1",
     "daisyui": "^4.12.2",
+    "depd": "^2.0.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
