--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css",
-    "postinstall": "npm install pg"
+    "postinstall": "npm install"
   },
   "author": "Renato Cordova",
   "license": "ISC",
